Fixed an issue, where refreshing on a root page would flicker from landing page to wall, because the initial user check has not yet been finished.

--- a/ui/src/app/shared/components/search-user/search-user.component.scss
+++ b/ui/src/app/shared/components/search-user/search-user.component.scss
@@ -31,7 +31,7 @@
     }
 
     &::placeholder {
-      color: $secondaryTextColor;
+      color: $secondaryTextColor !important;
     }
   }
   .search-icon {
